add grid functions

--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,13 @@
         text-align: center;
         margin: 20px auto;
       }
+      .grid-controls-buttons {
+        margin-bottom: 20px;
+      }
       .grid {
         margin: auto;
         border: solid 2px #111;
-        width: 469px;
+        width: 454px;
       }
       .grid-row {
         height: 15px;
